# rag-irish-laws

./: .gitignore  README.md  pyproject.toml
irish_statutes/: Dockerfile  bs.py  count_tokens.py  docker-compose.yml  environment.yml  eval_queries.py  extract_html_from_jsonl.py  law_index.py  law_query.py  precompute_evals.py  pull_models.sh  requirements.txt  run_evals.py  scrapy.cfg  utils.py
irish_statutes/basic-app/: app.py
irish_statutes/evals-app/: app.py
irish_statutes/indexer/: claude_agent.py  db.py  eval_queries.py  ingest.py  parse_statute.py  schema.sql  utils.py  vstore.py
irish_statutes/irish_statutes/: items.py  settings.py
irish_statutes/irish_statutes/spiders/: laws.py
irish_statutes/ollama/: Dockerfile  entrypoint.sh  init_model.sh
irish_statutes/tests/: test_app_json_parsing.py  test_claude_agent.py  test_ingest_db.py  test_parse_statute.py
irish_statutes_scrapy/: middlewares.py  pipelines.py  settings.py
