[project]
name = "irish-statute-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-vector-stores-postgres>=0.4.1",
    "llama-index>=0.12.10",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pytest-cov>=7.0.0",
    "shiny>=1.2.1",
    "shinyswatch>=0.8.0",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
